GG-35715 [IGNITE-17660] Add missing opens/exports to java15+ configuration (#2571)